fix to the font overflow issue when fallback

--- a/src/index.css
+++ b/src/index.css
@@ -62,5 +62,4 @@ body,
 .lcd-font {
   font-family: "Digital7", monospace;
   text-align: center;
-  font-size-adjust: 0.35;
 }
